package prototype;

option java_package = "com.skplanet.storeplatform.sac.client.product.vo";
import "intfmessage/product/ProductProto.proto";

// Request message
message reqProductCategory {
    required string tenantId = 1;       //테넌트ID
    required string menuId = 2;         //메뉴ID
    required string systemId = 3;       //시스템ID
    required string imageCd = 4;        //이미지코드
    optional string orderedBy = 5;      //정렬순서
    optional string prodGradeCd = 6;    //상품등급코드
    optional int32 offset = 7;          //offset
    optional int32 count = 8;           //count
}

// Default message
message ProductCategory {
    required com.skplanet.storeplatform.sac.client.intfmessage.product.vo.Product product = 2;
}

// Response message
message resProductCategory {
    repeated ProductCategory productCategoryList = 1;
}